2006-10-18  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/CardLayout/testMaximumLayoutSize.java: New test.
	* gnu/testlet/java/awt/CardLayout/testMinimumLayoutSize.java: New test.

2006-10-17  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/TransferHandler/exportToClipboard.java:
	New test.

2006-10-17  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/TransferHandler/createTransferable.java:
	New test.

2006-10-17  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/image/BufferedImage/getSubimage.java,
	* gnu/testlet/java/awt/image/Raster/createChild.java,
	* gnu/testlet/java/awt/image/WritableRaster/createWritableChild.java:
	New tests.

2006-10-16  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/TransferHandler/canImport.java: New test.

2006-10-16  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLabel/AccessibleJLabel/getCharacterBounds.java,
	* gnu/testlet/javax/swing/JLabel/AccessibleJLabel/getIndexAtPoint.java:
	New tests.

2006-10-14  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/ToolTipManager/DynamicToolTipTest.java:
	New test. This is a regression test
	for http://gcc.gnu.org/bugzilla/show_bug.cgi?id=27957 .

2006-10-13  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/ScrollPane/testSetLayout.java: New test.

2006-10-12  Roman Kennke <kennke@aicas.com>

	* Harness.java
	(InputPiperThread): New inner class. Forwards the input from
	the outside process to the inside (test) process.
	(initProcess): Set up piping.
	(printHelpMessage): Added description of -interactive option.
	* RunnerProcess.java
	(interactive): New field. This is set to true when we are running
	interactive tests only.
	(main): Interpret -interactive option.
	(runtest): Filter tests based on the -interactive flag.
	* gnu/testlet/VisualTestlet.java: New class. This is the
	base class for visual (interactive) tests.
	* gnu/testlet/javax/swing/JMenuItem/DragSelectTest.java: New
	interactive test.
