@@ -1,3 +1,7 @@
+2006-10-19  Francis Kung  <fkung@redhat.com>
+
+	* gnu/testlet/java/awt/image/BufferedImage/constants.java: New test.
+
 2006-10-18  Tania Bento  <tbento@redhat.com>
 
 	* gnu/testlet/java/awt/CardLayout/testMaximumLayoutSize.java: New test.
